# glass-jax

./: LICENSE.txt  README.md  setup.cfg  test_IA.py  testjax.py
.github/workflows/: tests.yml
docs/: conf.py  example.rst  index.rst
glass/: extension.py  galaxies.py  jax.py  syntax_checks.py  syntax_checks_glass.ipynb  syntax_checks_glassjax.ipynb
glass/_src/: fields.py  galaxies.py  intrinsic_alignments.py  lensing.py  math_utils.py  matter.py  observations.py  points.py  shapes.py  shear_from_convergence.py  shells.py
