[metadata]
name = glass-jax
version = attr: glass.jax.__version__
author = Author Name
author_email = author@example.com
description = GLASS package for extension
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files =
    LICENSE.txt
url = https://github.com/glass-dev/glass-extension-template
project_urls =
    Documentation = https://glass.readthedocs.io/projects/extension/
    Issues = https://github.com/glass-dev/glass-extension-template/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
install_requires =
    numpy
    glass>=2023.1
packages = find_namespace:

[options.packages.find]
include = glass*

[options.extras_require]
test =
    pytest
docs =
    sphinx
    sphinxcontrib-katex
    numpydoc
    furo

[flake8]
ignore = E226,E501,E741
